--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -13,5 +13,33 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+
+
+
+  <ion-item>
+    <ion-input type="text" placeholder="Enter task" [(ngModel)]="taskName">
+    </ion-input>
+
+    <div class="item-note" item-end>
+      <ion-button color="primary" (click)="addTask()">
+        <ion-icon name="add"></ion-icon>
+      </ion-button>
+    </div>
+  </ion-item>
+
+  <div padding>
+    <ion-list>
+      <ion-item *ngFor="let todo of taskList; let i=index">
+        {{todo}}
+        <div class="item-note" slot="end">
+          <ion-button color="danger" clear (click)="deleteTask(i)">
+            <ion-icon name="trash"></ion-icon>
+          </ion-button>
+        </div>
+      </ion-item>
+    </ion-list>
+  </div>
+
+
+
 </ion-content>
