--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -17,11 +17,11 @@
 
 
   <ion-item>
-    <ion-input type="text" placeholder="Enter task" [(ngModel)]="taskName">
+    <ion-input type="text" placeholder="Enter task" [(ngModel)]="taskDescription">
     </ion-input>
 
     <div class="item-note" item-end>
-      <ion-button color="primary" (click)="addTask()">
+      <ion-button color="success" (click)="addTask()">
         <ion-icon name="add"></ion-icon>
       </ion-button>
     </div>
