--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Your Notes
+      Your Tasks
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,15 +9,12 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">Your Tasks</ion-title>
     </ion-toolbar>
   </ion-header>
 
-
-
-
-  <ion-item>
-    <ion-input type="text" placeholder="Enter task" [(ngModel)]="taskDescription">
+  <ion-item color="light">
+    <ion-input type="text" placeholder="enter a new task..." [(ngModel)]="taskDescription">
     </ion-input>
 
     <div class="item-note" item-end>
@@ -29,7 +26,7 @@
 
   <div padding>
     <ion-list>
-      <ion-item *ngFor="let todo of taskList; let i=index">
+      <ion-item *ngFor="let todo of taskList; let i=index" color="warning">
         {{todo}}
         <div class="item-note" slot="end">
           <ion-button color="danger" clear (click)="deleteTask(i)">
