--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,7 +6,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Your Tasks</ion-title>
@@ -26,7 +26,7 @@
 
   <div padding>
     <ion-list>
-      <ion-item *ngFor="let todo of taskList; let i=index" color="warning">
+      <ion-item *ngFor="let todo of taskList; let i=index" color="warning" class="ion-margin">
         {{todo}}
         <div class="item-note" slot="end">
           <ion-button color="danger" clear (click)="deleteTask(i)">
