titles of tabs made larger and centered

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title size="large">
+    <ion-title class="ion-text-center">
       <h1>About</h1>
 
     </ion-title>
