output the quote - fixed

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -23,7 +23,7 @@
 
   <ion-card *ngIf="quoteOutput$ | async; let output">
     <ion-card-content>
-      {{ output.responseData.quoteText }}
+      {{ output.content }}
     </ion-card-content>
   </ion-card>
 
