--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title class="ion-text-center">
-      <h1>About</h1>
+      <h1>About & History</h1>
 
     </ion-title>
   </ion-toolbar>
@@ -9,6 +9,25 @@
 
 <ion-content class="ion-padding">
 
-  <h2>About This App:</h2>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>About this App:</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      This app was created in November 2023 for the AK5PM class at University of Tomas Bata in Zlin. 
+      <br>
+      It features tab structure, use of rest api and storage. 
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>History of quotes:</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      ""
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
