--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -17,21 +17,10 @@
     </ion-card-content>
   </ion-card>
 
-  
-  
-
-  <ion-card *ngIf="quoteOutput$ | async; let output" color="light">
+  <ion-card color="light">
     <ion-card-content>
-      <blockquote>
-      {{ output.content }}
-      <br><br>
-      <cite>{{ output.author }}</cite>
-      <hr>
-    </blockquote>
+        <p #contentContainer></p>
     </ion-card-content>
-    
   </ion-card>
-  <ion-button (click)="quoteClicked()"
-  color="medium" size="small" expand="block">New Quote</ion-button>
-
+  <ion-button (click)="quoteClicked()" color="medium" size="small" expand="block">New Quote</ion-button>
 </ion-content>
