minor changes to layout

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,26 +1,26 @@
 <ion-header>
   <ion-toolbar>
     <ion-title class="ion-text-center">
-      <h1>Task-Depository</h1>
+      <h1>Nuck Chorris App :-)</h1>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-card>
+  <ion-card color="medium">
     <ion-card-header>
       <ion-card-title>Welcome</ion-card-title>
     </ion-card-header>
 
     <ion-card-content>
-      Get inspired by a cool quote and deposit your tasks to free up your brain storage.
+      This app is here to make you smile
     </ion-card-content>
   </ion-card>
 
-  <ion-card color="light">
+  <ion-card color="danger">
     <ion-card-content>
-        <p #contentContainer></p>
+        <p #contentContainer>show a joke by clicking bellow</p>
     </ion-card-content>
   </ion-card>
-  <ion-button (click)="quoteClicked()" color="medium" size="small" expand="block">New Quote</ion-button>
+  <ion-button (click)="quoteClicked()" color="warning" size="medium" expand="block">New Joke</ion-button>
 </ion-content>
