--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -22,7 +22,7 @@
 
   <ion-card>
     <ion-card-header>
-      <ion-card-title>History of quotes:</ion-card-title>
+      <ion-card-title>History of jokes:</ion-card-title>
     </ion-card-header>
   
     <ion-card-content>
