minor changes to layout (colours, margin)

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="medium">
     <ion-title class="ion-text-center">
       <h1>Nuck Chorris App :-)</h1>
     </ion-title>
@@ -22,5 +22,5 @@
         <p #contentContainer>show a joke by clicking bellow</p>
     </ion-card-content>
   </ion-card>
-  <ion-button (click)="quoteClicked()" color="warning" size="medium" expand="block">New Joke</ion-button>
+  <ion-button (click)="quoteClicked()" color="warning" size="medium" expand="block" class="ion-margin">New Joke</ion-button>
 </ion-content>
