fixed a typo at tab3

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -14,7 +14,7 @@
       <ion-card-title>About this App:</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      This app was created in November 2023 for the AK5PM class at University of Tomas Bata in Zlin. 
+      This app was created in November 2023 for the AK5PM class at Tomas Bata University in Zlin. 
       <br>
       It features tab structure, use of rest api and storage. 
     </ion-card-content>
