--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,11 +2,11 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="home-outline"></ion-icon>
+      <ion-icon aria-hidden="true" name="happy-outline"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="true" name="list-outline"></ion-icon>
+      <ion-icon aria-hidden="true" name="book-outline"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3" href="/tabs/tab3">
